--- a/style.css
+++ b/style.css
@@ -7,3 +7,60 @@ td, th {
     border: 1px solid white;
     padding: 5px 10px;
 }
+
+.page-wrap {
+    background-color: #ece0d1;
+    min-height: 100vh;
+}
+ .jumbotron{
+     background-image: url("https://i.pinimg.com/originals/98/33/e2/9833e22c4361d1185913336f82046a43.jpg");
+     padding-left: 0;
+     padding-right: 0;
+}
+
+ .jumbotron > h1 {
+     font-family: 'Chela One', cursive;
+     background-color: white;
+     opacity: 80%;
+
+ }
+.row {
+    background-color: white;
+    border-radius: 25px;
+}
+#row1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 5px;
+    overflow-y: scroll;
+    height: 65vh;
+
+}
+#row2 {
+    border-left: solid #ece0d1;
+    border-right: solid #ece0d1;
+}
+h1.new-coffee {
+    font-family: 'Bebas Neue', cursive;
+    text-align: center;
+
+}
+#coffees {
+    font-family: 'Pattaya', sans-serif;
+}
+
+div > h5 {
+    font-family: 'Bebas Neue', cursive;
+}
+
+#firstimage {
+    width: inherit;
+}
+
+#secondimage {
+    width: inherit;
+}
+#tm {
+    padding-top: 10px;
+    padding-left: 0px;
+}
